# llgtrt

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  LoRA.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker.yaml
docker/: Dockerfile  Dockerfile.dockerignore  bash.sh  build.sh  drun.sh  gh-cleanup.sh  push.sh  run.sh  run_draft.sh
docs/: chat_template.md  vlm_deployment.md
llgtrt/: Cargo.toml  build.rs  run.sh
llgtrt/chat_config/: llama3.json
llgtrt/chat_templates/: llama31.j2  llama31.json5
llgtrt/py/: llgtrt_base.py  llgtrt_native.pyi  sample_processor.py
llgtrt/py/llama_3.2_vision/: input_processor.py
llgtrt/py/phi3.5-vision/: input_processor.py
llgtrt/py/qwen2/: README.md  input_processor.py
llgtrt/py/standalone_example/: input_processor.py  run_trt.py
llgtrt/src/: async_exec.rs  chat.rs  config.rs  config_info.json  constraint_mgr.rs  error.rs  jsonutil.rs  lib.rs  logging.rs  lora.rs  main.rs  py.rs  startup.rs  state.rs  tokenizer.rs
llgtrt/src/routes/: api_ext.rs  completions.rs  health_check.rs  mod.rs  openai.rs
model_configs/phi-3/: llgtrt.json5
model_configs/qwen-r1/: llgtrt.json5
scripts/: build.sh  bump.py  collect-comments.py  extract_lora.py  launch-llgtrt-draft.sh  launch-llgtrt.sh  pytest.sh  regen.sh  req.py  test-infer.sh  trtbld.sh
tests/: test_basic.py
tests/vlm/Qwen2-VL-2B-Instruct/: README.md  preprocess.py  test_trt.py
trtllm-c/: CMakeLists.txt  logits.cpp  main.cpp  mask_logits.cu  mask_logits.h  tlc.h
trtllm_rs/: Cargo.toml  build.rs
trtllm_rs/src/: lib.rs  tlc.rs
