[workspace]
members = [
    "trtllm_rs",
    "llgtrt",
    "llguidance/parser",
    "llguidance/sample_parser",
    "llguidance/rust",
    "toktrie/core",
    "toktrie/hf_tokenizers",
    "derivre",
]
exclude = [
    "llguidance/rust",
]
resolver = "2"

[profile.release]
# debug = 1

[patch.'https://github.com/microsoft/toktrie']
toktrie = { path = "toktrie/core" }
toktrie_hf_tokenizers = { path = "toktrie/hf_tokenizers" }

[patch.'https://github.com/microsoft/derivre']
derivre = { path = "derivre" }
