[workspace]
members = [
    "trtllm_rs",
    "llgtrt",
    "llguidance/parser",
    "llguidance/toktrie",
    "llguidance/toktrie_hf_tokenizers",
    "derivre",
]
exclude = [
    "llguidance",
]
resolver = "2"

[profile.release]
# debug = 1

[patch.'https://github.com/microsoft/derivre']
derivre = { path = "derivre" }

[workspace.dependencies]
toktrie = { path = "llguidance/toktrie" }
llguidance = { path = "llguidance/parser" }
toktrie_hf_tokenizers = { path = "llguidance/toktrie_hf_tokenizers" }
trtllm_rs = { path = "trtllm_rs" }