[workspace]
members = [
    "trtllm_rs",
    "llgtrt",
    "llguidance/sample_parser",
    "llguidance/python_ext",
    "llguidance/json_stats",
    "llguidance/parser",
    "llguidance/toktrie",
    "llguidance/toktrie_hf_tokenizers",
    "derivre",
]
exclude = [
    "llguidance",
]
resolver = "2"

[profile.release]
debug = 1

[patch.crates-io]
derivre = { path = "derivre" }

[workspace.dependencies]
toktrie = { path = "llguidance/toktrie" }
llguidance = { path = "llguidance/parser" }
toktrie_hf_tokenizers = { path = "llguidance/toktrie_hf_tokenizers" }
trtllm_rs = { path = "trtllm_rs" }