[package]
name = "llgtrt"
version = "0.14.3"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1.33.0", features = ["full"] }
async-stream = "0.3.5"
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }
trtllm_rs = { path = "../trtllm_rs" }
toktrie = { path = "../toktrie/core" }
toktrie_hf_tokenizers = { path = "../toktrie/hf_tokenizers" }
flexi_logger = "0.29.0"
log = "0.4.22"
rand = "0.8.5"
llguidance_parser = { path = "../llguidance/parser" }
rayon = "1.10.0"
futures-core = "0.3.30"
minijinja = { version = "2.3.1", features = ["preserve_order", "loop_controls", "loader"] }
chrono = "0.4.38"
json5 = "0.4.1"
